<resources>
    <string name="app_name"></string>
    <string name="msgLoginCampoVazio">Por favor, preencha todos os campos</string>
    <string name="msgLoginSucesso">Login bem-sucedido</string>
    <string name="msgLoginErro">Login ou senha incorretos</string>

    <string name="msgCadastroSucesso">Cadastro bem-sucedido</string>
    <string name="msgCadastroErro">Cdastro ou senha incorretos</string>
    <string name="msgCadastroCampoVazio">Por favor, preencha todos os campos</string>

    <string name="msgSenhaSucesso">Senha alterada com sucesso</string>
    <string name="msgSenhaErro">Ocorreu erro ao alterar senha</string>

    <string name="txtErroUsuario">Erro ao carregar usuários</string>

    <string name="tituloLogin">Login</string>
    <string name="nomePlaholder">Nome do Usuário</string>
    <string name="emailPlaholder">Email do Usuário</string>
    <string name="senhaPlaholder">Senha</string>
    <string name="btnLogin">Entrar</string>

    <string name="nomeMotorista">Nome do motorista</string>
    <string name="nomeModelo">Modelo</string>
    <string name="nomePlaca">Placa</string>
    <string name="escolher_servico">Escolher Serviço</string>
    <string name="txtCancelar">Cancelar</string>

    <string name="addresEnderecoOrigem">Endereço de Origem</string>
    <string name="addresEnderecoDestino">Endereço de Destino</string>
    <string name="msgAddressConfirmada">Viagem confirmada!</string>
    <string name="msgAddresErro">Erro ao confirmar a viagem!</string>
    <string name="msgAddressVazia">Por favor, preencha todos os campos</string>

    <string name="btnCompartilhar">Compartilhar</string>
    <string name="textHistorico">Histórico de Viagens</string>
    <string name="tituloEnderecoDiaalogo">Insira endereço</string>
    <string name="tituloExcluirViagemDiaalogo">Excluir Viagem</string>
    <string name="tituloExcluirViagemDiaalogoConfirm">Tem certeza que deseja excluir esta viagem?</string>
    <string name="erroOrigem">Endereço de origem não encontrado.</string>
    <string name="erroDestino">Endereço de destino não encontrado.</string>

    <string name="excluir">Excluir</string>
    <string name="msgViagemExcluidaSuceso">Viagem excluida com sucesso!</string>
    <string name="msgViagemExcluidaErro">Erro ao excluir viagem!</string>
    <string name="cancelar">Cancelar</string>

    <string name="txtDestino">Detalhes do Destino</string>
    <string name="txtOrigem">Detalhes do Origem</string>
    <string name="txtMotorista">Chamar motorista</string>
    <string name="txtEmail">Email do usuário</string>
    <string name="txtSenhaNova">Alterar Senha</string>
    <string name="btnAlterarSEnha">Alterar Senha</string>
    <string name="btnVoltar">Voltar para o Mapa</string>
    <string name="btnCadastrar">Cadastrar</string>

    <string name="cepInvalido">CEP de origem inválido.</string>
    <string name="verificarCEP">Erro ao verificar o CEP .</string>

</resources>