<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_tam_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        android:textSize="@dimen/text_tam_3"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/margin_tam_2"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomePlaholder"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_tam_1"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_tam_1"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senhaPlaholder"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/margin_tam_2"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        android:backgroundTint="@color/azul"/>
</LinearLayout>
