<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_tam_1">

    <TextView
        android:id="@+id/textViewOriginDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_tam_2"
        android:textColor="@android:color/black"
        android:text="@string/txtOrigem"/>

    <TextView
        android:id="@+id/textViewDestinationDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tam_2"
        android:textSize="@dimen/text_tam_2"
        android:textColor="@android:color/black"
        android:text="@string/txtDestino"/>

    <Button
        android:id="@+id/buttonCallDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMotorista"
        android:layout_marginTop="@dimen/margin_tam_2"
        android:backgroundTint="@color/azul"/>

</LinearLayout>
